# Sabixa-backend

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py  mvp.py
app/services/: __init__.py  ai.py  assessment.py  auth.py
tests/: test_mvp_flow.py
